# VexRiscv_SCA

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  build.sbt
bitstream/: prebuilt_cw305.bit  prebuilt_cw305.hwh  prebuilt_sakura-x.hwh
bootloader/: Makefile  boot.coe  boot.s  ld.script  main.c  trap.s
ip_repo/VexRiscv_1_0/: component.xml
ip_repo/VexRiscv_1_0/example_designs/bfm_design/: VexRiscv_v1_0_tb.sv  design.tcl
ip_repo/VexRiscv_1_0/example_designs/debug_hw_design/: VexRiscv_v1_0_hw_test.tcl  design.tcl
ip_repo/VexRiscv_1_0/hdl/: VexRiscv_v1_0.v  VexRiscv_v1_0_M_DATA_AXI.v  VexRiscv_v1_0_M_INST_AXI.v
ip_repo/VexRiscv_1_0/xgui/: VexRiscv_v1_0.tcl
sdk/: CMakeLists.txt
sdk/cmake/: FindLLVMTools.cmake  FindRVTOOLCHAIN.cmake
sdk/include/: minilib.h  serial.h
sdk/ldscripts/: ld.script
sdk/src/: CMakeLists.txt  ex_handler.s  gpio.c  iolib.c  led.c  printf.c  rand.c  scanf.c  serial.c  start.s  string.c
sdk/src/include/: iodef.h
sdk/template/: CMakeLists.txt  Makefile.common.in
src/main/scala/: CoreGen.scala  CpuConfig.scala
test/: cw305_hello_world.py  sakura_hello_world.py  test_hello_world.py
test/hello/: Makefile  hello.c  hello.elf  hello.sakura-x.elf
vivado/: create_bd.tcl  create_cw305_bd.tcl  create_sakura-x_bd.tcl  gpio.xdc  gpio_cw305.xdc
vivado/ip_repo/VexRiscv_Core_1_0/: component.xml
vivado/ip_repo/VexRiscv_Core_1_0/drivers/VexRiscv_Core_v1_0/data/: VexRiscv_Core.mdd  VexRiscv_Core.tcl
vivado/ip_repo/VexRiscv_Core_1_0/drivers/VexRiscv_Core_v1_0/src/: Makefile  VexRiscv_Core.c  VexRiscv_Core.h  VexRiscv_Core_selftest.c
vivado/ip_repo/VexRiscv_Core_1_0/example_designs/bfm_design/: VexRiscv_Core_v1_0_tb.sv  design.tcl
vivado/ip_repo/VexRiscv_Core_1_0/example_designs/debug_hw_design/: VexRiscv_Core_v1_0_hw_test.tcl  design.tcl
vivado/ip_repo/VexRiscv_Core_1_0/hdl/: VexRiscv_Core_v1_0.v  VexRiscv_Core_v1_0_S_CTRL_AXI.v
vivado/ip_repo/VexRiscv_Core_1_0/xgui/: VexRiscv_Core_v1_0.tcl
vivado/ip_repo/axi_buffer_1_0/: component.xml
vivado/ip_repo/axi_buffer_1_0/drivers/axi_buffer_v1_0/data/: axi_buffer.mdd  axi_buffer.tcl
vivado/ip_repo/axi_buffer_1_0/drivers/axi_buffer_v1_0/src/: Makefile  axi_buffer.c  axi_buffer.h  axi_buffer_selftest.c
vivado/ip_repo/axi_buffer_1_0/example_designs/bfm_design/: axi_buffer_v1_0_tb.sv  design.tcl
vivado/ip_repo/axi_buffer_1_0/example_designs/debug_hw_design/: axi_buffer_v1_0_hw_test.tcl  design.tcl
vivado/ip_repo/axi_buffer_1_0/hdl/: axi_buffer_v1_0.v  axi_buffer_v1_0_S_AXI.v
vivado/ip_repo/axi_buffer_1_0/src/: fifo.v
vivado/ip_repo/axi_buffer_1_0/xgui/: axi_buffer_v1_0.tcl
vivado/ip_repo/axi_lfsr_1_0/: component.xml
vivado/ip_repo/axi_lfsr_1_0/drivers/axi_lfsr_v1_0/data/: axi_lfsr.mdd  axi_lfsr.tcl
vivado/ip_repo/axi_lfsr_1_0/drivers/axi_lfsr_v1_0/src/: Makefile  axi_lfsr.c  axi_lfsr_selftest.c
vivado/ip_repo/axi_lfsr_1_0/example_designs/bfm_design/: axi_lfsr_v1_0_tb.sv  design.tcl
vivado/ip_repo/axi_lfsr_1_0/example_designs/debug_hw_design/: axi_lfsr_v1_0_hw_test.tcl  design.tcl
vivado/ip_repo/axi_lfsr_1_0/hdl/: axi_lfsr_v1_0.v  axi_lfsr_v1_0_S00_AXI.v
vivado/ip_repo/axi_lfsr_1_0/src/: LFSR.v
